Fixes publications texts on mobile.

--- a/_scss/organisms/_publication-highlights.scss
+++ b/_scss/organisms/_publication-highlights.scss
@@ -1,9 +1,10 @@
 .publication-highlights {
   display: block;
   padding: 0 5px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   @include mq($from: tablet) {
     padding: 0 20px;
+    margin-bottom: 50px;
   }
 
   .highlights {
@@ -77,13 +78,13 @@
         grid-template-areas: "main" "hor01" "hor02" "hor03";
       }
       @include mq($from: desktop) {
-        grid-template-columns: 1fr 350px;
+        grid-template-columns: minmax(0, 1fr) 350px;
         grid-template-rows: repeat(3, auto);
         grid-template-areas: "hor01 main" "hor02 main" "hor03 main";
         grid-column-gap: 25px;
       }
       @include mq($from: wide) {
-        grid-template-columns: 1fr 350px;
+        grid-template-columns: minmax(0, 1fr) 350px;
         grid-template-rows: repeat(3, 1fr);
         grid-template-areas: "hor01 main" "hor02 main" "hor03 main";
         grid-column-gap: 25px;
@@ -123,8 +124,8 @@
     .hor {
       display: grid;
       grid-template-columns: 1fr;
-      grid-template-rows: 150px 1fr;
-      grid-row-gap: 70px;
+      grid-template-rows: auto;
+      grid-row-gap: 10px;
       grid-template-areas: "cimg" "ctext";
       min-height: 0;
       min-width: 0;
@@ -132,11 +133,14 @@
       @include mq($from: tablet) {
         grid-template-rows: 1fr;
         grid-column-gap: 15px;
+        grid-row-gap: 15px;
         grid-template-columns: 1.3fr 0.7fr;
+        grid-template-rows: 150px 1fr;
         grid-template-areas: "ctext cimg";
       }
       @include mq($from: desktop) {
         grid-template-columns: 0.7fr 1.3fr;
+        grid-template-rows: 150px 1fr;
         grid-template-areas: "cimg ctext";
       }
 
@@ -149,9 +153,12 @@
     }
 
     .grid-container-reversed .hor {
+      grid-template-rows: auto;
 
       @include mq($from: tablet) {
+        grid-row-gap: 15px;
         grid-template-columns: 1.3fr 0.7fr;
+        grid-template-rows: 150px 1fr;
         grid-template-areas: "ctext cimg";
       }
     }
